<resources>
    <string name="app_name">My First App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="ViewExpenditure">View Expenditure</string>
    <string name="ViewIncome">View Income</string>
    <string name="AddExpenditure">Add Expenditure</string>
    <string name="AddIncome">Add Income</string>
    <string name="AddCategory">Add Category</string>
    <string name="About">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="AboutActivityView">Description of About</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_income">IncomeActivity</string>
    <string name="category_description">Enter the title of Category.</string>
    <string name="category_title">Title</string>
    <string name="category_button">Add</string>

</resources>
