<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity"
    android:orientation="vertical"
    >
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/About"
        android:onClick="About"
        />


    <Button
        android:id="@+id/Add_Category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddCategory"
        android:onClick="AddCategory"

        />
    <Button
        android:id="@+id/Add_Income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddIncome"
        android:onClick="AddIncome"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddExpenditure"
        android:layout_gravity="center_horizontal"
        android:onClick="AddExpenditure"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ViewIncome"
        android:onClick="ViewIncome"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ViewExpenditure"
        android:onClick="ViewExpenditure"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <EditText
        android:id="@+id/edit_message"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"
        />

</LinearLayout>
</FrameLayout>